# data-analysis-using-agent

./: .gitignore  config.yaml  data-analysis-simple.py  main.py  pyproject.toml
data/: nyc_parking_violations_2022_small.parquet
