[project]
name = "data-analysis-using-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.0",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "tqdm>=4.67.3",
]
